# TgBot

./: .env.example  .gitignore  Cargo.toml  README.md  com.user.tgbot-rust.plist  install-service.sh
src/: config.rs  download.rs  handlers.rs  helpers.rs  main.rs  service.rs  types.rs
